Thu Sep 16 18:22:28 2004  George Lebl <jirka@5z.com>

	* src/mpwrap.c: fix round, ceil and trunc, plus round (0.5) should
	  really return 0 not 1

	* src/geniustest.pl, src/geniustests.txt: fixes plus some new tests

Thu Sep 16 17:54:27 2004  George Lebl <jirka@5z.com>

	* lib/functions/elementary.gel: optimize erf a bit and fix it's
	  comment

	* configure.in, Makefile.am, src/Makefile.am, mpfr/*:  Include a
	  recent CVS version of mpfr to avoid all the mess.  We can still
	  compile with an outside version if needed though.

	* src/funclib.c, src/genius.c, src/gnome-genius.c, src/mpwrap.[ch]:
	  remove all non-mpfr stuff since we always have mpfr now which
	  removes quite a bit of ugliness.  Plus remove some other
	  cruft as well.

Tue Sep 14 17:14:53 2004  George Lebl <jirka@5z.com>

	* src/funclib.c, lib/number_theory/misc.gel: make Divides built-in
	  which should make a number of things faster.  Also add
	  ExactDivision function using gmp's divexact which does exact
	  division much faster once we know that the two numbers actually
	  divide one another (it returns garbage otherwise).

	* src/geniustests.txt: add some tests

Tue Sep 14 16:31:51 2004  George Lebl <jirka@5z.com>

	* lib/number_theory/misc.gel: Use ApplyOverMatrix(2) on a few
	  functions, and add BernoulliNumber

	* src/geniustests.txt: Add test for BernoulliNumber

Tue Sep 14 09:57:15 2004  George Lebl <jirka@5z.com>

	* configure.in: some cleanup, and set the extra optimization flags
	  directly rather then use -O3 since then -O2 would just reset thing,
	  so we again optimize nicely.

	* src/calc.[ch], src/funclib.c, src/genius.c, src/graphing.c:
	  Implement translation of help texts coming from the standard
	  library.  Still error texts are not translated, will need to
	  figure that out.  User generated help strings are gotten with
	  "genius --gettext" similarly to the "--compile" option.

	* Makefile.am, lib/Makefile.am, po/POTFILES.in: create and use
	  lib/library-strings.c
